@@ -1,3 +1,10 @@
+Mon Jan 25 12:04:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp:
+        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.h:
+          dpf is now a process wide singleton. This uncovers some issues with
+          the sharing of the dp between connectors
+
 Mon Jan 25 11:17:27 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/examples/Quoter/Distributor/Distributor_exec.cpp
